Adding minimum styles

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
                 background-color: pink;
             }
 
+            @media (max-width: 480px) {
+                kogb-app[unresolved] {
+                    height: 200vh;
+                    flex-direction: column;
+                }
+
+                .app__visual {
+                    width: 100%;
+                    height: 100vh;
+                }
+                .app__content {
+                    width: 100%;
+                    height: 100vh;
+                }
+            }
+
             path {
                 fill: yellow;
             }
