--- a/src/blocks/block-page.html
+++ b/src/blocks/block-page.html
@@ -15,6 +15,22 @@
             width: 50%;
             background-color: var(--block-page-content, #0097a7);
         }
+
+        @media (max-width: 480px) {
+            :host {
+                height: 200vh;
+                flex-direction: column;
+            }
+
+            .block-page__visual {
+                width: 100%;
+                height: 100vh;
+            }
+            .block-page__content {
+                width: 100%;
+                height: 100vh;
+            }
+        }
     </style>
     <template>
         <div class="block-page__visual">
