--- a/src/pages/artists/page-artists.html
+++ b/src/pages/artists/page-artists.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 
+<link rel="import" href="../../blocks/block-page.html">
+
 <dom-module id="page-artists">
     <style>
         :host {
