Changing the main menu, brand-name links to home-page

--- a/src/elements/kogb-main-menu.html
+++ b/src/elements/kogb-main-menu.html
@@ -10,11 +10,10 @@
     <template>
         <nav>
             <ul>
-                <li><a href="/">/</a></li>
                 <li><a href="/shows">/shows</a></li>
                 <li><a href="/artists">/artists</a></li>
                 <li><a href="/about">/about</a></li>
-                <li>Kling&amp;Bang</li>
+                <li><a href="/">Kling&amp;Bang</a></li>
             </ul>
         </nav>
     </template>
