Adding router and pages (#2)
* Adding router and pages

* Adding minimum styles

* Changing the main menu, brand-name links to home-page

* Cleaning up code

* Cleaning up code

--- a/index.html
+++ b/index.html
@@ -12,10 +12,83 @@
                 box-sizing: border-box;
             }
 
-            kogk-app[unresolved] {  }
+            kogb-app[unresolved] {
+                display: flex;
+                height: 100vh;
+            }
+
+            .app__visual {
+                width: 50%;
+                height: 100%;
+                background-color: #286f89;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .app__content {
+                width: 50%;
+                height: 100%;
+                background-color: #a1b241;
+            }
+
+            .app_navigation {
+                background-color: pink;
+            }
+
+            @media (max-width: 480px) {
+                kogb-app[unresolved] {
+                    height: 200vh;
+                    flex-direction: column;
+                }
+
+                .app__visual {
+                    width: 100%;
+                    height: 100vh;
+                }
+                .app__content {
+                    width: 100%;
+                    height: 100vh;
+                }
+            }
+
+            path {
+                fill: yellow;
+            }
         </style>
     </head>
     <body>
-        <kogb-app unresolved></kogb-app>
+        <kogb-app unresolved>
+            <div class="app__visual">
+                <svg xmlns="http://www.w3.org/2000/svg" width="71.398px" height="10.437px">
+                    <g>
+                        <path d="M4.154,7.313V2.851H1.48c-0.12,0-0.24-0.06-0.24-0.24V0.849c0-0.144,0.084-0.264,0.3-0.264h10.446
+                            c0.156,0,0.276,0.06,0.276,0.36v1.727c0,0.12-0.132,0.18-0.456,0.18h-1.511v2.291l5.265-2.267V2.851h-2.555
+                            c-0.18,0-0.276-0.012-0.276-0.3V0.824c0-0.12,0.06-0.24,0.36-0.24h9.595c0.18,0,0.3,0.06,0.3,0.36v1.667c0,0.12-0.12,0.24-0.3,0.24
+                            h-2.687l-2.615,1.188l3.19,3.274h2.771c0.144,0,0.228,0.096,0.228,0.276V9.34c0,0.096-0.06,0.24-0.324,0.24H11.842
+                            c-0.144,0-0.24-0.12-0.24-0.324V7.493c0-0.084,0.096-0.18,0.264-0.18h0.839l-1.067-1.127l-1.343,0.6v0.528h0.647
+                            c0.156,0,0.18,0.12,0.18,0.24v1.823c0,0.12-0.084,0.204-0.288,0.204H1.444c-0.12,0-0.204-0.084-0.204-0.3V7.553
+                            c0-0.144,0.084-0.24,0.18-0.24H4.154z"/>
+                        <path d="M29.856,9.58c-3.754,0-5.529-0.947-5.529-2.111c0-3.083,6.776-3.634,8.755-3.91c-0.023-0.024-0.144-0.312-0.144-0.588
+                            c0-1.607,1.739-2.315,2.914-2.315h2.243c1.007,0,2.194,0.42,2.194,1.644c0,1.055-1.355,1.595-1.451,1.691
+                            c0.12,0.144,1.056,0.768,1.212,0.852c1.343-0.504,4.341-2.458,4.737-2.818c0.048-0.036,0.096-0.024,0.119,0l1.116,1.031
+                            C46.072,3.103,46.072,3.163,46,3.223c-0.443,0.312-3.682,2.495-4.258,2.734c0.084,0.06,0.983,0.708,2.734,0.708
+                            c1.764,0,2.891-1.043,2.951-1.127c0.06-0.072,0.167-0.024,0.216,0l1.199,1.151c0.06,0.06,0.048,0.12-0.024,0.24
+                            c-0.972,1.499-3.37,2.65-5.661,2.65h-1.319c-1.727,0-3.957-1.104-4.725-1.463C36.009,8.608,33.55,9.58,30.804,9.58H29.856z
+                             M32.651,7.289c1.439,0,2.471-0.372,2.746-0.504C35.11,6.497,34.186,5.622,33.97,5.31c-1.571,0.216-2.71,0.695-2.71,1.307
+                            c0,0.384,0.384,0.672,0.983,0.672H32.651z M37.497,2.54c0,0.384,0.384,0.671,0.455,0.744c0.108-0.108,0.54-0.468,0.54-0.768
+                            c0-0.288-0.336-0.408-0.516-0.408C37.808,2.108,37.497,2.228,37.497,2.54z"/>
+                        <path d="M49.612,9.58c-0.107,0-0.191-0.048-0.191-0.132V7.625c0-0.24,0.071-0.335,0.216-0.335h2.687V2.755h-2.579
+                            c-0.239,0-0.3-0.06-0.3-0.18V0.908c0-0.24,0.096-0.324,0.216-0.324h16.696c1.99,0,4.305,0.936,4.305,2.255
+                            c0,1.175-1.619,1.919-2.375,2.291c0.48,0.18,2.471,0.444,2.471,2.159c0,1.967-2.975,2.291-3.357,2.291H49.612z M58.403,4.039h4.474
+                            c0.348,0,0.887-0.252,0.887-0.6s-0.719-0.647-1.21-0.647h-4.15V4.039z M58.403,7.361h4.042c0.731,0,1.319-0.192,1.319-0.564
+                            c0-0.419-0.707-0.708-1.223-0.708h-4.138V7.361z"/>
+                    </g>
+                </svg>
+            </div>
+            <div class="app__content">
+                <div class="app_navigation">navigation</div>
+            </div>
+        </kogb-app>
     </body>
 </html>
